# rssbot

./: .gitignore  Cargo.toml  Dockerfile
src/: checker.rs  cmdhandles.rs  data.rs  fetcher.rs  main.rs  utils.rs  utlis.rs
